# Multilingual

./: Cargo.toml  README.md
.github/workflows/: ci.yml
example/: baseLanguage.ts  index.tsx  language.ts  useLanguage.tsx  utils.ts
example/testDirs/: index.ts
src/: cli.rs  language.rs  main.rs  parse.rs  read.rs  utils.rs
